Remove ActionDispatcher.pendingActions and optimize MovingAverages calculations